# test_bumpver

./: bad_file.txt  new_file.txt  pyproject.toml
